maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: not found: value dir
      dir =keepHandOnSideWall() 
      ^PledgeMaze:7: error: not found: value dir
      cpt=dir
          ^